--- a/dukeLife/Base.lproj/Main.storyboard
+++ b/dukeLife/Base.lproj/Main.storyboard
@@ -862,7 +862,7 @@
                                                 </state>
                                                 <connections>
                                                     <action selector="imagePageButton:" destination="ZOb-Xv-TrV" eventType="touchUpInside" id="rOp-L6-VZc"/>
-                                                    <segue destination="fB0-4A-3eK" kind="showDetail" identifier="images" id="yfa-w5-SDk"/>
+                                                    <segue destination="fB0-4A-3eK" kind="show" id="8GZ-6b-DcE"/>
                                                 </connections>
                                             </button>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="70" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="izx-3B-9Cc">
@@ -1088,13 +1088,15 @@
                             <outlet property="delegate" destination="fB0-4A-3eK" id="nfU-cc-gwI"/>
                         </connections>
                     </collectionView>
+                    <navigationItem key="navigationItem" id="qD3-L3-VTT"/>
                     <connections>
                         <outlet property="collectionView" destination="ktf-A1-TbW" id="VCV-rR-j40"/>
+                        <segue destination="Jz9-mQ-KED" kind="show" id="GPk-7g-Src"/>
                     </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="i1A-Bk-oOa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7595.652173913044" y="241.74107142857142"/>
+            <point key="canvasLocation" x="8123" y="-638"/>
         </scene>
         <!--User Profile View Controller-->
         <scene sceneID="6Tx-sV-nPm">
@@ -1173,6 +1175,28 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fIl-oG-ugR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="7595.652173913044" y="1014.5089285714286"/>
+        </scene>
+        <!--Guest Scroll View Controller-->
+        <scene sceneID="bZh-xJ-IOA">
+            <objects>
+                <viewController id="Lng-e1-ZnY" customClass="guestScrollViewController" customModule="dukeLife" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="pxR-iw-S3Z">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jIz-gs-127">
+                                <rect key="frame" x="0.0" y="56" width="414" height="752"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="mcd-u7-0pU"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="SuY-0s-NiQ"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aJO-fl-Yki" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="9308.6956521739139" y="241.74107142857142"/>
         </scene>
         <!--Add Place-->
         <scene sceneID="3SF-HP-6FV">
@@ -1489,7 +1513,7 @@
                                                 <connections>
                                                     <action selector="imagePageButton:" destination="0N0-lg-6GR" eventType="touchUpInside" id="1gE-g8-7yh"/>
                                                     <action selector="imagePageButton:" destination="FE8-cb-UEF" eventType="touchUpInside" id="WCm-WG-0ex"/>
-                                                    <segue destination="jOy-3n-Bg1" kind="show" identifier="images" id="OHt-wG-b5x"/>
+                                                    <segue destination="jOy-3n-Bg1" kind="show" id="lDW-2Y-2oC"/>
                                                 </connections>
                                             </button>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="55" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="SzO-NR-a0e">
@@ -1674,10 +1698,42 @@
                         </connections>
                     </collectionView>
                     <navigationItem key="navigationItem" id="sh5-lz-jd8"/>
+                    <connections>
+                        <segue destination="Jz9-mQ-KED" kind="show" id="W76-zX-n7M"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GqH-y9-ohZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="7808.6956521739139" y="-1708.2589285714284"/>
+            <point key="canvasLocation" x="7797" y="-1854"/>
+        </scene>
+        <!--Scroll View Controller-->
+        <scene sceneID="ECC-HU-eyO">
+            <objects>
+                <viewController id="Jz9-mQ-KED" customClass="ScrollViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="UjO-In-Av0">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="a3O-Y9-FNv">
+                                <rect key="frame" x="0.0" y="56" width="414" height="752"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="euM-RX-H03">
+                                <rect key="frame" x="0.0" y="56" width="414" height="752"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="h5m-BT-UVx"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="KKd-uM-wK5"/>
+                    <connections>
+                        <outlet property="image" destination="euM-RX-H03" id="cdg-Wt-2GR"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NwV-JH-aDI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="8803" y="-1854"/>
         </scene>
         <!--Add Detail View Controller-->
         <scene sceneID="E8f-dS-Uep">
@@ -1774,11 +1830,12 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="GPk-7g-Src"/>
         <segue reference="79s-OR-zwl"/>
         <segue reference="yHN-yd-Pa1"/>
         <segue reference="FUw-Ed-bFr"/>
-        <segue reference="2Rl-nu-3Ww"/>
-        <segue reference="IoX-zN-uP6"/>
+        <segue reference="Kzm-ZT-PFO"/>
+        <segue reference="leB-58-hpu"/>
         <segue reference="Mwl-YY-y5E"/>
     </inferredMetricsTieBreakers>
     <resources>
